<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">JustJava</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="input_name">Name</string>
    <string name="topping">Toppings</string>
    <string name="cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="add_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="thank_you">Thank you!</string>
    <string name="email_subject">Coffee order for</string>
    <string name="no_more_than100">You cannot have more than 100 coffees</string>
    <string name="no_less_than1">You cannot have less than 1 coffee</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Elena" where Elena is the
      user's name. "Elena" will not be translated. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Elena">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
</resources>
